# vault-cleaner

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  WORKLOG.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
src/vault_cleaner/: cli.py  config.py  manifest.py  parse.py  report.py  wishlist.py
src/vault_cleaner/rules/: armor.py  armor_close.py  armor_dupes.py  dupes.py  ghosts.py  weapons.py
tests/: test_armor_close.py  test_armor_dupes.py  test_armor_rules.py  test_cli_report.py  test_config.py  test_dupes.py  test_ghost_rules.py  test_manifest.py  test_parse.py  test_rails.py  test_report.py  test_weapons_rules.py  test_wishlist.py
tests/fixtures/: armor.csv  armor_close.csv  armor_dupes.csv  ghosts.csv  ghosts_cleanup.csv  weapons.csv  weapons_dupes.csv  wishlist.txt
