[project]
name = "vault-cleaner"
version = "0.1.0"
description = "Tag Destiny 2 vault clutter from DIM CSV exports, for re-import into DIM"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = ["pandas>=2.0"]

[project.scripts]
vault-cleaner = "vault_cleaner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
