[project]
name = "vault-cleaner"
version = "0.1.0"
description = "Tag Destiny 2 vault clutter from DIM CSV exports, for re-import into DIM"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["pandas>=3.0,<4"]

[project.optional-dependencies]
# The dev toolchain, shared by CI and local setup (AGENTS.md) so the two
# can't drift: everything CI gates on must come from here.
dev = ["pytest", "ruff"]

[project.scripts]
vault-cleaner = "vault_cleaner.cli:main"

[build-system]
# >=77.0.3 for PEP 639 (SPDX license expression + license-files)
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
